Fix too small search field

--- a/assets/scss/templates/_page-buddypress.scss
+++ b/assets/scss/templates/_page-buddypress.scss
@@ -3,6 +3,11 @@
     @extend .clearfix;
   }
 
+  #search-members-form {
+    label {
+      width: rem-calc(300);
+    }
+  }
 
   // This is used for groups header as well
   #dogium-member-cover {
